Adicionei para Likedin

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Mono&family=Roboto:wght@500;700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
-<body class="">
+<body class="pink">
 <div class="container">
     <img src="TEDDYBOY.JPEG" alt="Minha foto">
     <h1>José Tadeu </h1>
     <p class=" name">@limateddy</p>
     <ul type> <!-- disc, circle, square; UL É PARA LISTA NÃO ORDENADA-->     
-        <li> <a href="https://www.youtube.com/channel/UCPrdcRXc0KKLUEccYbYLV0w" target="_blanck" rel="external"> 🎥 YOUTUBE</a>
+        <li> <a href="https://www.linkedin.com/in/jos%C3%A9-tadeu-de-lima-filho-34073920a/"> 🎥 Linkedin</a>
         </li>
         <li>
-            <a href="https://www.instagram.com/limateddy/" > 📸INSTAGRAM</a> 
+            <a href="https://www.behance.net/jostadeudefilho" > 📸Behance</a> 
         </li>
         <li>
-            <a href=" https://www.facebook.com/" >🐱 GITHUB</a> 
+            <a href="https://github.com/Tadeu56" >🐱 GITHUB</a> 
         </li>
     
         <li>
