mudei para dark

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Mono&family=Roboto:wght@500;700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
-<body class="pink">
+<body class="dark">
 <div class="container">
     <img src="TEDDYBOY.JPEG" alt="Minha foto">
     <h1>José Tadeu </h1>
