mudei para outros projetos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Mono&family=Roboto:wght@500;700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
-<body class="dark">
+<body class="pink">
 <div class="container">
     <img src="TEDDYBOY.JPEG" alt="Minha foto">
     <h1>José Tadeu </h1>
@@ -26,7 +26,7 @@
         </li>
     
         <li>
-            <a href="https://images.app.goo.gl/ZWhqYjHZG7kzS3vj8">🐤TWITTER </a> 
+            <a href="https://tadeu56.github.io/landing-page-Ballerini/">Outros projetos.</a> 
         </li>
         
     </ul>
