mudei varias coisas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Formulario</title>
+    <title>Links Page.</title>
+    <link rel="shortcut icon" href="icons8-termos-e-condições-16.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Mono&family=Roboto:wght@500;700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -26,7 +27,7 @@
         </li>
     
         <li>
-            <a href="https://tadeu56.github.io/landing-page-Ballerini/">Outros projetos.</a> 
+            <a href="https://tadeu56.github.io/landing-page-Ballerini/">📑Mais projetos.</a> 
         </li>
         
     </ul>
